fix alignment of feature shape

--- a/src/ui/components/ShapeFeature/stylesheet.css
+++ b/src/ui/components/ShapeFeature/stylesheet.css
@@ -13,8 +13,9 @@
 }
 
 .container {
-  margin-bottom: 0;
-  composes: 'layout';
+  display: grid;
+  column-gap: var(--col-gap);
+  grid-column: 1/-1;
 }
 
 .content {
@@ -88,6 +89,10 @@
     grid-column: 2/-2;
     margin-left: 0;
   }
+
+  .container {
+    grid-template-columns: var(--grid-template-columns);
+  }
 }
 
 @media (min-width: 888px) {
@@ -97,7 +102,7 @@
   }
 
   .container {
-    margin: 0;
+    grid-template-columns: var(--grid-content-columns);
   }
 
   .top {
@@ -108,11 +113,12 @@
 
   .img-wrapper {
     margin-left: -4rem;
-    grid-column: 1/5;
+    grid-column: 1/4;
   }
 
   .content {
-    grid-column: -3/5;
+    grid-column: 4/-1;
+    padding: 5rem;
   }
 
   .tagline {
